@@ -1,18 +1,21 @@
-# Copyright 2001-2013 Free Software Foundation, Inc.
+# Copyright 2001 Free Software Foundation, Inc.
 
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
-# the Free Software Foundation; either version 3 of the License, or
+# the Free Software Foundation; either version 2 of the License, or
 # (at your option) any later version.
-#
+# 
 # This program is distributed in the hope that it will be useful,
 # but WITHOUT ANY WARRANTY; without even the implied warranty of
 # MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 # GNU General Public License for more details.
-#
+# 
 # You should have received a copy of the GNU General Public License
-# along with this program.  If not, see <http://www.gnu.org/licenses/>.
+# along with this program; if not, write to the Free Software
+# Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.  */
 
+# Please email any bugs, comments, and/or additions to this file to:
+# bug-gdb@prep.ai.mit.edu
 # use this to debug:
 #
 #log_user 1
@@ -20,15 +23,17 @@
 # step-line.exp -- Expect script to test stepping in files with
 # #line directives.
 
+if $tracelevel then {
+    strace $tracelevel
+}
+
 set testfile step-line
-set srcfile ${testfile}.c
-set linefile ${testfile}.inp
+set srcfile ${srcdir}/${subdir}/${testfile}.c
 set binfile ${objdir}/${subdir}/${testfile}
 
 remote_exec build "rm -f ${binfile}"
-if { [gdb_compile "${srcdir}/${subdir}/${srcfile}" "${binfile}" executable {debug}] != "" } {
-     untested step-line.exp
-     return -1
+if { [gdb_compile "${srcfile}" "${binfile}" executable {debug}] != "" } {
+     gdb_suppress_entire_file "Testcase compile failed, so all tests in this file will automatically fail."
 }
 
 gdb_exit
@@ -41,15 +46,22 @@ if ![runto_main] then {
    return 0
 }
 
-set remote_linefile [remote_download host ${srcdir}/${subdir}/${linefile}]
-
-gdb_test "break f1" ".*Breakpoint 2 at .* file .*step-line.c.*" "break f1"
+gdb_test "break f1" ".*Breakpoint 2 at .* file step-line.c.*" "break f1"
 gdb_test "continue" \
          "Continuing.*Breakpoint 2, f1 \\(i=4\\).*dummy \\(1, i\\);" \
 	 "continue to f1"
 gdb_test "next" \
          ".*i = f2 \\(i\\);.*" \
 	 "next over dummy 1"
+
+# As of Oct 2002, GCC does record the effect of #line directives in
+# the source line info, but not in macro info.  This means that GDB's
+# symtabs (built from the former, among other things) may mention
+# filenames that GDB's macro tables (built from the latter) don't have
+# any record of.  Make sure GDB can handle this by trying to evaluate
+# an expression, which will do a macro expansion.
+gdb_test "print i" ".* = 4.*" 
+
 gdb_test "next" \
          ".*dummy \\(2, i\\);.*" \
 	 "next to dummy 2"
@@ -89,7 +101,4 @@ gdb_test "next" \
 gdb_test "next" \
          ".*RETURN \\(j\\);.*" \
 	 "next over dummy 10"
-
-remote_file host delete ${remote_linefile}
-
 return 0
